Added export dashboard data only at the moment

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Els elements de qualificaci\u00F3
 VIOLIN.yAxisTitle = Noten
 
+about_app = Quant a l'aplicaci\u00F3
+
 borderLength = ample de l\u00EDnia
 
 borderSpace = Espai entre l\u00EDnies
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = XLS grade expo
 log.event.xml_grade_exported                                    = XML grade exported
 log.event.zip_archive_of_folder_downloaded                      = S'ha descarregat l'arxiu Zip o la carpeta
 
-menu.about          = Quant a l'aplicaci\u00F3
-menu.changeconfig   = Change configuration
-menu.changesubject  = Canvia course
-menu.clearselection = Neteja la selecci\u00F3
-menu.coursestats    = Course stats
-menu.edit           = Edita
-menu.exit           = Sortir
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = Exportar CSV...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _Dossier
-menu.help           = Ajuda
-menu.importconfig   = Import configuration...
-menu.logout         = Tancar sessi\u00F3
-menu.moreinfo       = _More information
-menu.saveall        = Desa-ho tot com a ...
-menu.savechart      = Desa el gr\u00E0fic com ...
-menu.theme          = Themes
-menu.tools          = Tools
-menu.update         = Update course
-menu.view           = View
+menu.about               = Quant a l'aplicaci\u00F3
+menu.changeconfig        = Change configuration
+menu.changesubject       = Canvia course
+menu.clearselection      = Neteja la selecci\u00F3
+menu.coursestats         = Course stats
+menu.edit                = Edita
+menu.exit                = Sortir
+menu.exportconfig        = Export configuration...
+menu.exportcsv           = Exportar CSV...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _Dossier
+menu.help                = Ajuda
+menu.importconfig        = Import configuration...
+menu.logout              = Tancar sessi\u00F3
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Desa-ho tot com a ...
+menu.savechart           = Desa el gr\u00E0fic com ...
+menu.theme               = Themes
+menu.tools               = Tools
+menu.update              = Update course
+menu.view                = View
 
 message.export_csv            = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
 message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer: 
