--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Grade Artikel
 VIOLIN.yAxisTitle = Grades
 
+about_app = \u00DCber die Bewerbung
+
 borderLength = Linienbreite
 
 borderSpace = Zeilenabstand
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = Bewertung als 
 log.event.xml_grade_exported                                    = Bewertung als XML exportiert
 log.event.zip_archive_of_folder_downloaded                      = Verzeichnis wurde heruntergeladen
 
-menu.about          = \u00DCber die Bewerbung
-menu.changeconfig   = Change configuration
-menu.changesubject  = Das Thema course
-menu.clearselection = Auswahl aufheben
-menu.coursestats    = Course stats
-menu.edit           = Bearbeiten
-menu.exit           = Ausgang
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = CSV-Daten exportieren...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _Datei
-menu.help           = Hilfe
-menu.importconfig   = Import configuration...
-menu.logout         = Ausloggen
-menu.moreinfo       = _More information
-menu.saveall        = Alles speichern unter ..
-menu.savechart      = Grafik speichern unter ...
-menu.theme          = Themes
-menu.tools          = Tools
-menu.update         = Update course
-menu.view           = View
+menu.about               = \u00DCber die Bewerbung
+menu.changeconfig        = Change configuration
+menu.changesubject       = Das Thema course
+menu.clearselection      = Auswahl aufheben
+menu.coursestats         = Course stats
+menu.edit                = Bearbeiten
+menu.exit                = Ausgang
+menu.exportconfig        = Export configuration...
+menu.exportcsv           = CSV-Daten exportieren...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _Datei
+menu.help                = Hilfe
+menu.importconfig        = Import configuration...
+menu.logout              = Ausloggen
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Alles speichern unter ..
+menu.savechart           = Grafik speichern unter ...
+menu.theme               = Themes
+menu.tools               = Tools
+menu.update              = Update course
+menu.view                = View
 
 message.export_csv            = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
