--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Grade items
 VIOLIN.yAxisTitle = Grades
 
+about_app = About application
+
 borderLength = Line width
 
 borderSpace = Line spacing
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = XLS grade expo
 log.event.xml_grade_exported                                    = XML grade exported
 log.event.zip_archive_of_folder_downloaded                      = Zip archive of folder downloaded
 
-menu.about          = _About application
-menu.changeconfig   = _Change configuration
-menu.changesubject  = _Change course
-menu.clearselection = _Clear selection
-menu.coursestats    = _Course stats
-menu.edit           = _Edit
-menu.exit           = _Close
-menu.exportconfig   = Ex_port configuration...
-menu.exportcsv      = E_xport CSV data...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _File
-menu.help           = _Help
-menu.importconfig   = _Import configuration...
-menu.logout         = _Logout
-menu.moreinfo       = _More information
-menu.saveall        = Save all as...
-menu.savechart      = _Save chart as...
-menu.theme          = _Themes
-menu.tools          = _Tools
-menu.update         = _Update course
-menu.view           = _View
+menu.about               = _About application
+menu.changeconfig        = _Change configuration
+menu.changesubject       = _Change course
+menu.clearselection      = _Clear selection
+menu.coursestats         = _Course stats
+menu.edit                = _Edit
+menu.exit                = _Close
+menu.exportconfig        = Ex_port configuration...
+menu.exportcsv           = E_xport CSV data...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _File
+menu.help                = _Help
+menu.importconfig        = _Import configuration...
+menu.logout              = _Logout
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Save all as...
+menu.savechart           = _Save chart as...
+menu.theme               = _Themes
+menu.tools               = _Tools
+menu.update              = _Update course
+menu.view                = _View
 
 message.export_csv            = CSV export successfully. Review the file: 
 message.export_csv_desglossed = CSV breakdown export successfully. Review the file: 
