--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = \u00CDtems de calificaci\u00F3n
 VIOLIN.yAxisTitle = Calificaciones
 
+about_app = Acerca de la aplicaci\u00F3n
+
 borderLength = Ancho de l\u00EDnea
 
 borderSpace = Espaciado entre l\u00EDneas
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = Calificaci\u00
 log.event.xml_grade_exported                                    = Calificaci\u00F3n XML exportada
 log.event.zip_archive_of_folder_downloaded                      = Directorio descargado en formato Zip
 
-menu.about          = A_cerca de la aplicaci\u00F3n
-menu.changeconfig   = Ca_mbiar configuraci\u00F3n
-menu.changesubject  = _Cambiar curso
-menu.clearselection = _Borrar selecci\u00F3n
-menu.coursestats    = E_stad\u00EDsticas del curso
-menu.edit           = _Editar
-menu.exit           = _Salir
-menu.exportconfig   = Ex_portar configuraci\u00F3n...
-menu.exportcsv      = E_xportar datos CSV...
-menu.exportphotos   = Exportar fotos de los usuarios seleccionados...
-menu.file           = _Archivo
-menu.help           = A_yuda
-menu.importconfig   = _Importar configuraci\u00F3n...
-menu.logout         = _Cerrar sesi\u00F3n
-menu.moreinfo       = _M\u00E1s informaci\u00F3n
-menu.saveall        = Guardar todo como...
-menu.savechart      = _Guardar gr\u00E1fico como...
-menu.theme          = _Temas
-menu.tools          = _Herramientas
-menu.update         = Actua_lizar curso
-menu.view           = _Ver
+menu.about               = A_cerca de la aplicaci\u00F3n
+menu.changeconfig        = Ca_mbiar configuraci\u00F3n
+menu.changesubject       = _Cambiar curso
+menu.clearselection      = _Borrar selecci\u00F3n
+menu.coursestats         = E_stad\u00EDsticas del curso
+menu.edit                = _Editar
+menu.exit                = _Salir
+menu.exportconfig        = Ex_portar configuraci\u00F3n...
+menu.exportcsv           = E_xportar datos CSV...
+menu.exportdashboard     = Exportar dashboard...
+menu.exportdefaultphotos = Con foto por defecto...
+menu.exportphotos        = Con fotos de usuarios...
+menu.file                = _Archivo
+menu.help                = A_yuda
+menu.importconfig        = _Importar configuraci\u00F3n...
+menu.logout              = _Cerrar sesi\u00F3n
+menu.moreinfo            = _M\u00E1s informaci\u00F3n
+menu.photos              = Exportar fotos de los usuarios seleccionados...
+menu.saveall             = Guardar todo como...
+menu.savechart           = _Guardar gr\u00E1fico como...
+menu.theme               = _Temas
+menu.tools               = _Herramientas
+menu.update              = Actua_lizar curso
+menu.view                = _Ver
 
 message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el fichero: 
 message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el ficlero: 
