--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Alementi del grado
 VIOLIN.yAxisTitle = Gradi
 
+about_app = Informazioni sull'applicazione
+
 borderLength = Larghezza della linea
 
 borderSpace = Interlinea
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = Esportate valu
 log.event.xml_grade_exported                                    = Esportate valutazione in XML
 log.event.zip_archive_of_folder_downloaded                      = L'archivio zip della cartella \u00E8 stato scaricato
 
-menu.about          = Informazioni sull'applicazione
-menu.changeconfig   = Change configuration
-menu.changesubject  = Cambia course
-menu.clearselection = Cancella selezione
-menu.coursestats    = Course stats
-menu.edit           = modificare
-menu.exit           = Uscita
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = Esporta dati CSV...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _File
-menu.help           = Aiuto
-menu.importconfig   = Import configuration...
-menu.logout         = Disconnettersi
-menu.moreinfo       = _More information
-menu.saveall        = Salva tutto come ...
-menu.savechart      = Salva grafico come ...
-menu.theme          = Themes
-menu.tools          = Tools
-menu.update         = Update course
-menu.view           = View
+menu.about               = Informazioni sull'applicazione
+menu.changeconfig        = Change configuration
+menu.changesubject       = Cambia course
+menu.clearselection      = Cancella selezione
+menu.coursestats         = Course stats
+menu.edit                = modificare
+menu.exit                = Uscita
+menu.exportconfig        = Export configuration...
+menu.exportcsv           = Esporta dati CSV...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _File
+menu.help                = Aiuto
+menu.importconfig        = Import configuration...
+menu.logout              = Disconnettersi
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Salva tutto come ...
+menu.savechart           = Salva grafico come ...
+menu.theme               = Themes
+menu.tools               = Tools
+menu.update              = Update course
+menu.view                = View
 
 message.export_csv            = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file: 
