--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Artigos da categoria
 VIOLIN.yAxisTitle = Notas
 
+about_app = Sobre a aplica\u00E7\u00E3o
+
 borderLength = Espessura da linha
 
 borderSpace = Espa\u00E7amento entre linhas
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = Avalia\u00E7\u
 log.event.xml_grade_exported                                    = Avalia\u00E7\u00E3o exportada em XML
 log.event.zip_archive_of_folder_downloaded                      = Foi descarregado um ficheiro ZIP da pasta
 
-menu.about          = Sobre a aplica\u00E7\u00E3o
-menu.changeconfig   = Change configuration
-menu.changesubject  = Mudar de course
-menu.clearselection = Sele\u00E7\u00E3o clara
-menu.coursestats    = Course stats
-menu.edit           = Editar
-menu.exit           = Sa\u00EDda
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = Exportar dados CSV...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _Arquivo
-menu.help           = Socorro
-menu.importconfig   = Import configuration...
-menu.logout         = Sair
-menu.moreinfo       = _More information
-menu.saveall        = Salvar tudo como ...
-menu.savechart      = Salvar gr\u00E1fico como ...
-menu.theme          = Theme
-menu.tools          = Tools
-menu.update         = Update course
-menu.view           = View
+menu.about               = Sobre a aplica\u00E7\u00E3o
+menu.changeconfig        = Change configuration
+menu.changesubject       = Mudar de course
+menu.clearselection      = Sele\u00E7\u00E3o clara
+menu.coursestats         = Course stats
+menu.edit                = Editar
+menu.exit                = Sa\u00EDda
+menu.exportconfig        = Export configuration...
+menu.exportcsv           = Exportar dados CSV...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _Arquivo
+menu.help                = Socorro
+menu.importconfig        = Import configuration...
+menu.logout              = Sair
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Salvar tudo como ...
+menu.savechart           = Salvar gr\u00E1fico como ...
+menu.theme               = Theme
+menu.tools               = Tools
+menu.update              = Update course
+menu.view                = View
 
 message.export_csv            = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
