--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -57,6 +57,8 @@ VIOLIN = Violin
 VIOLIN.xAxisTitle = Articles de grade
 VIOLIN.yAxisTitle = Grades
 
+about_app = A propos de l'application
+
 borderLength = Largeur de ligne
 
 borderSpace = Interligne
@@ -686,27 +688,30 @@ log.event.xls_grade_exported                                    = Notes export\u
 log.event.xml_grade_exported                                    = Notes export\u00E9es en format XML
 log.event.zip_archive_of_folder_downloaded                      = Archive ZIP d'un dossier t\u00E9l\u00E9charg\u00E9e
 
-menu.about          = A propos de l'application
-menu.changeconfig   = Change configuration
-menu.changesubject  = Change le sujet
-menu.clearselection = Effacer la s\u00E9lection
-menu.coursestats    = Course stats
-menu.edit           = modifier
-menu.exit           = Sortie
-menu.exportconfig   = Export configuration...
-menu.exportcsv      = Exporter des donn\u00E9es CSV...
-menu.exportphotos   = Export selected user photos...
-menu.file           = _Fichier
-menu.help           = Aidez-moi
-menu.importconfig   = Import configuration...
-menu.logout         = Connectez - Out
-menu.moreinfo       = _More information
-menu.saveall        = Enregistrer tout sous ...
-menu.savechart      = Enregistrer le graphique sous ...
-menu.theme          = Themes
-menu.tools          = Tools
-menu.update         = Update course
-menu.view           = View
+menu.about               = A propos de l'application
+menu.changeconfig        = Change configuration
+menu.changesubject       = Change le sujet
+menu.clearselection      = Effacer la s\u00E9lection
+menu.coursestats         = Course stats
+menu.edit                = modifier
+menu.exit                = Sortie
+menu.exportconfig        = Export configuration...
+menu.exportcsv           = Exporter des donn\u00E9es CSV...
+menu.exportdashboard     = Export dashboard...
+menu.exportdefaultphotos = With default photo...
+menu.exportphotos        = With user photos...
+menu.file                = _Fichier
+menu.help                = Aidez-moi
+menu.importconfig        = Import configuration...
+menu.logout              = Connectez - Out
+menu.moreinfo            = _More information
+menu.photos              = Export selected user photos...
+menu.saveall             = Enregistrer tout sous ...
+menu.savechart           = Enregistrer le graphique sous ...
+menu.theme               = Themes
+menu.tools               = Tools
+menu.update              = Update course
+menu.view                = View
 
 message.export_csv            = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers: 
