--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Graus
 
 GROUP_BOXPLOT = Boxplot de Grups
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -127,6 +125,7 @@ displayYScaleTitle = T\u00EDtol de l'eix I
 emptyGradeColor = El color de grau buida
 
 error.chargeconfiguration = Error a l'importar la configuraci\u00F3
+error.downloadingdata     = Error when downloading data.
 error.fields              = Heu de completar tots els camps.
 error.generateCharts      = No es poden generar gr\u00E0fics.
 error.generatedataset     = S'ha produ\u00EFt un error en construir el conjunt de dades.
