--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Noten
 
 GROUP_BOXPLOT = Gruppen-Boxplot
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -127,6 +125,7 @@ displayYScaleTitle = Titel der Y-Achse
 emptyGradeColor = Farbe leer Grad
 
 error.chargeconfiguration = Fehler bei der Konfiguration importieren
+error.downloadingdata     = Error when downloading data.
 error.fields              = Sie m\u00FCssen alle Felder ausf\u00FCllen.
 error.generateCharts      = Diagramme k\u00F6nnen nicht generiert werden.
 error.generatedataset     = Fehler beim Erstellen des Datasets.
