--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Group BoxPlot
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -67,7 +65,7 @@ btn.clear    = Clear
 btn.enter    = Enter
 btn.filter   = Apply dates filter
 btn.group    = Group
-btn.remove   = Clean
+btn.remove   = Clear
 btn.rol      = Rol
 btn.type     = Type
 
@@ -127,6 +125,7 @@ displayYScaleTitle = Title Y-axis
 emptyGradeColor = Color empty grade
 
 error.chargeconfiguration = Error when importing the configuration
+error.downloadingdata     = Error when downloading data.
 error.fields              = You have to complete all the fields.
 error.generateCharts      = Can't generate charts.
 error.generatedataset     = Error building the dataset.
