--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -13,14 +13,12 @@ CALIFICATION_BAR.yAxisTitle = Usuarios matriculados #
 
 CUM_LINE = Acumulados
 
-CUM_LINE.xAxisTitle = {0}
+CUM_LINE.xAxisTitle = {0} Limite Superior
 CUM_LINE.yAxisTitle = Registros
 
 GRADE_REPORT_TABLE = Calificaciones
 
 GROUP_BOXPLOT = BoxPlot de Grupos
-
-GROUP_VIOLIN = Violin de Grupos
 
 HEAT_MAP = Heatmap
 
@@ -88,18 +86,18 @@ charset = Codificaci\u00F3n de fichero
 
 chart.mean                = Media
 
-chartlabel.atypicalValue  = Valor Atipico
+chartlabel.atypicalValue  = Valor At\u00EDpico
 chartlabel.firstquartile  = Primer Cuartil
 chartlabel.generalMean    = Media General
 chartlabel.groupMean      = Media Del Grupo
-chartlabel.lowerlimit     = Limite Inferior
+chartlabel.lowerlimit     = L\u00EDmite Inferior
 chartlabel.median         = Mediana
 chartlabel.name           = Nombre
 chartlabel.progress       = Progresi\u00F3n
 chartlabel.tableGroupMean = Media Grupo
 chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
-chartlabel.upperlimit     = Limite Superior
+chartlabel.upperlimit     = L\u00EDmite Superior
 
 checkbox.onlyweb    = Solo registros de web
 checkbox.updatedata = Actualizar datos
@@ -127,6 +125,7 @@ displayYScaleTitle = T\u00EDtulo del eje Y
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
 error.chargeconfiguration = Error al importar la configuraci\u00F3n
+error.downloadingdata     = Error al descargar los datos.
 error.fields              = Debes completar todos los campos.
 error.generateCharts      = No se han podido generar los gr\u00E1ficos.
 error.generatedataset     = Error en la construcci\u00F3n del dataset.
@@ -134,10 +133,10 @@ error.host                = No se ha podido conectar con el host.
 error.invalidcache        = Cach\u00E9 incompatible de versi\u00F3n antigua de la aplicaci\u00F3n, limpia la cach\u00E9 y vuelva descargar.
 error.login               = Usuario y/o contrase\u00F1a incorrectos.
 error.malformedurl        = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
-error.nocacheavaible      = No se encunetra cach\u00E9 para este usuario y host
+error.nocacheavaible      = No se encuentra cach\u00E9 para este usuario y host
 error.nocourse            = Debe seleccionar un curso.
 error.saveallcharts       = No se han podido exportar los gr\u00E1ficos.
-error.savechart           = Error al gruardar el gr\u00E1fico.
+error.savechart           = Error al guardar el gr\u00E1fico.
 error.saveconfiguration   = No se ha podido guardar el fichero de configuraci\u00F3n.
 error.savecsvfiles        = No se han podido exportar los datos en formato CSV.
 error.updateofflinemode   = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
@@ -202,7 +201,7 @@ label.lastcourseaccess            = \u00DAltimo acceso Curso
 label.lastupdate                  = \u00DAltima actualizaci\u00F3n local:
 label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n para cada usuario...
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
-label.loadingstats                = Generando estadisticas...
+label.loadingstats                = Generando estad\u00EDsticas...
 label.loadingstudents             = Calificaciones de alumnos cargadas...
 label.logentries                  = # entradas de registros
 label.loggedin                    = Inicio sesi\u00F3n:
@@ -295,7 +294,7 @@ log.event.all_the_submissions_are_being_downloaded              = Todos los env\
 log.event.allow_role_assignment                                 = Permitir asignaci\u00F3n de roles
 log.event.allow_role_override                                   = Permitir sobreescritura de roles
 log.event.allow_role_switch                                     = Permitir cambio de rol
-log.event.allow_role_view                                       = Allow role view
+log.event.allow_role_view                                       = Permitir ver roles
 log.event.an_extension_has_been_granted                         = Se ha entregado una extensi\u00F3n.
 log.event.an_online_text_has_been_uploaded                      = Un texto en l\u00EDnea ha sido subido.
 log.event.assessment_evaluated                                  = Calificaci\u00F3n evaluada
