--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Boxplot de Groupe
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -127,6 +125,7 @@ displayYScaleTitle = Titre de l'axe Y
 emptyGradeColor = Couleur qualit\u00E9 vide
 
 error.chargeconfiguration = Erreur lors de l'importation de la configuration
+error.downloadingdata     = Error when downloading data.
 error.fields              = Vous devez remplir tous les champs.
 error.generateCharts      = Impossible de g\u00E9n\u00E9rer des graphiques.
 error.generatedataset     = Erreur lors de la construction du jeu de donn\u00E9es.
