--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Gradi
 
 GROUP_BOXPLOT = Diagramma di Gruppo
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -127,6 +125,7 @@ displayYScaleTitle = Titolo asse Y
 emptyGradeColor = Colore grade vuoto
 
 error.chargeconfiguration = Errore durante l'importazione della configurazione
+error.downloadingdata     = Error when downloading data.
 error.fields              = Devi completare tutti i campi.
 error.generateCharts      = Non posso generare grafici.
 error.generatedataset     = Errore durante la creazione del set di dati.
