--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -20,8 +20,6 @@ GRADE_REPORT_TABLE = Notas
 
 GROUP_BOXPLOT = Boxplot do Grupo
 
-GROUP_VIOLIN = Violin Groups
-
 HEAT_MAP = Heatmap
 
 HEAT_MAP.xAxisTitle = {0}
@@ -127,6 +125,7 @@ displayYScaleTitle = T\u00EDtulo do eixo Y
 emptyGradeColor = Cor grau vazia
 
 error.chargeconfiguration = Erro ao importar a configura\u00E7\u00E3o
+error.downloadingdata     = Error when downloading data.
 error.fields              = Voc\u00EA tem que completar todos os campos.
 error.generateCharts      = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
 error.generatedataset     = Erro ao construir o conjunto de dados.
