Added interactive logs dashboard

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = El curs no es pot actualitzar en mode fora de l\u00E
 error.user                = Error when retrieving user data.
 error.userdata            = Error en recuperar les dades de l'usuari.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = A falta de color de grau
 
 firstInterval = primer interval
@@ -712,6 +714,7 @@ menu.tools               = Tools
 menu.update              = Update course
 menu.view                = View
 
+message.export                = Exportaci\u00F3 amb \u00E8xit. Revisi el fitxer del directori: 
 message.export_csv            = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer del directori: 
 message.export_csv_desglossed = Exportaci\u00F3 CSV amb \u00E8xit. Revisi el fitxer: 
 message.export_csv_success    = Exportaci\u00F3 CSV amb \u00E8xit. Revisi els fitxers del directori: 
