--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = Der Kurs kann nicht im Offline-Modus aktualisiert we
 error.user                = Error when retrieving user data.
 error.userdata            = Fehler beim Wiederherstellen der Benutzerdaten.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = Failing Grade Farbe
 
 firstInterval = erstes Intervall
@@ -712,6 +714,7 @@ menu.tools               = Tools
 menu.update              = Update course
 menu.view                = View
 
+message.export                = Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_csv            = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_csv_desglossed = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
 message.export_csv_success    = CSV-Export erfolgreich. \u00DCberpr\u00FCfen Sie die Dateien im Verzeichnis: 
