--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = No se puede actualizar el curso en modo offline. Por
 error.user                = Error al recuperar los datos del usuario.
 error.userdata            = Error al recuperar los datos del usuario.
 
+exceptionTrace = La traza de error fue:
+
 failGradeColor = Color de calificaci\u00F3n suspensa
 
 firstInterval = Primer intervalo
@@ -712,6 +714,7 @@ menu.tools               = _Herramientas
 menu.update              = Actua_lizar curso
 menu.view                = _Ver
 
+message.export                = Exportaci\u00F3n con \u00E9xito. Revise el fichero: 
 message.export_csv            = Exportaci\u00F3n CSV con \u00E9xito. Revise el fichero: 
 message.export_csv_desglossed = Exportaci\u00F3n CSV desglosado con \u00E9xito. Revise el ficlero: 
 message.export_csv_success    = Exportaci\u00F3n CSV con \u00E9xito. Revise los ficheros en el directorio: 
