--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mo
 error.user                = Error when retrieving user data.
 error.userdata            = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = couleur de qualit\u00E9 \u00E0 d\u00E9faut
 
 firstInterval = premier intervalle
@@ -712,6 +714,7 @@ menu.tools               = Tools
 menu.update              = Update course
 menu.view                = View
 
+message.export                = Export avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_csv            = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
 message.export_csv_desglossed = Export CSV avec succ\u00E8s. Passez en revue les fichiers: 
 message.export_csv_success    = Export CSV avec succ\u00E8s. Passez en revue les fichiers du r\u00E9pertoire: 
