--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = Il corso non pu\u00F2 essere aggiornato in modalit\u
 error.user                = Error when retrieving user data.
 error.userdata            = Errore durante il recupero dei dati dell'utente.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = In mancanza di colore di grado
 
 firstInterval = primo intervallo
@@ -712,6 +714,7 @@ menu.tools               = Tools
 menu.update              = Update course
 menu.view                = View
 
+message.export                = Esportazione con successo. Esaminare i file nella directory: 
 message.export_csv            = Esportazione CSV con successo. Esaminare i file nella directory: 
 message.export_csv_desglossed = Esportazione CSV con successo. Esaminare i file: 
 message.export_csv_success    = Esportazione CSV con successo. Esaminare i file nella directory: 
