--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = O curso n\u00E3o pode ser atualizado no modo offline
 error.user                = Error when retrieving user data.
 error.userdata            = Erro ao recuperar dados do usu\u00E1rio.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = Falhando cor grau
 
 firstInterval = primeiro intervalo
@@ -712,6 +714,7 @@ menu.tools               = Tools
 menu.update              = Update course
 menu.view                = View
 
+message.export                = Exporta\u00E7\u00E3o com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_csv            = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_csv_desglossed = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
 message.export_csv_success    = Exporta\u00E7\u00E3o CSV com sucesso. Revise os arquivos no diret\u00F3rio: 
