--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -143,6 +143,8 @@ error.updateofflinemode   = The course cannot be updated in offline mode. Please
 error.user                = Error when retrieving user data.
 error.userdata            = Error when recovering user data.
 
+exceptionTrace = The exception stacktrace was:
+
 failGradeColor = Failing grade color
 
 firstInterval = First interval
@@ -712,6 +714,7 @@ menu.tools               = _Tools
 menu.update              = _Update course
 menu.view                = _View
 
+message.export                = Export successfully. Review the file: 
 message.export_csv            = CSV export successfully. Review the file: 
 message.export_csv_desglossed = CSV breakdown export successfully. Review the file: 
 message.export_csv_success    = CSV export successfully. Review the files in the directory: 
