Modificar el texto de las pestañas y el renombrado #43

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -113,6 +113,7 @@ choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
+clustering.2Dgraph                       = 2D graph
 clustering.analize                       = Analize
 clustering.cluster                       = Cluster
 clustering.clusters                      = Clusters
@@ -130,13 +131,14 @@ clustering.error.parameter               = Invalid field [{0}] ({1}), must be gr
 clustering.execute                       = Execute
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
+clustering.label                         = Label
 clustering.logsTypes                     = Types of logs
 clustering.maxIterations                 = Max number of iterations
 clustering.minPts                        = Min. points per cluster
 clustering.numTrials                     = Number of trial
 clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
-clustering.rename                        = Rename
+clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.table                         = Data table
 
 cutGrade = Grade to pass
