--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -113,6 +113,7 @@ choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
+clustering.2Dgraph                       = Gr\u00E1fico 2D
 clustering.analize                       = Analizar
 clustering.cluster                       = Agrupaci\u00F3n
 clustering.clusters                      = Agrupaciones
@@ -130,13 +131,14 @@ clustering.error.parameter               = Campo inv\u00E1lido [{0}] ({1}), debe
 clustering.execute                       = Ejecutar
 clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
+clustering.label                         = Etiquetar
 clustering.logsTypes                     = Tipos de registros
 clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
 clustering.numTrials                     = N\u00FAmero de intentos
 clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
-clustering.rename                        = Renombrar
+clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.table                         = Tabla de datos
 
 cutGrade = Nota de corte
