--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -129,6 +129,7 @@ clustering.error.notData                 = No data selected
 clustering.error.notUsers                = No users selected
 clustering.error.parameter               = Invalid field [{0}] ({1}), must be greater than {2}.
 clustering.execute                       = Execute
+clustering.exportGrades                  = Export grades
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
 clustering.label                         = Label
