Marcar el centroide de cada cluster en la gráfica #38

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -115,6 +115,8 @@ choiceBox.YEAR_WEEK    = Weeks
 
 clustering.2Dgraph                       = 2D graph
 clustering.analize                       = Analize
+clustering.centroid                      = Centroid
+clustering.centroids                     = Centroids
 clustering.cluster                       = Cluster
 clustering.clusters                      = Clusters
 clustering.distance                      = Type of distance
