--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -115,6 +115,8 @@ choiceBox.YEAR_WEEK    = Semanas
 
 clustering.2Dgraph                       = Gr\u00E1fico 2D
 clustering.analize                       = Analizar
+clustering.centroid                      = Centroide
+clustering.centroids                     = Centroides
 clustering.cluster                       = Agrupaci\u00F3n
 clustering.clusters                      = Agrupaciones
 clustering.distance                      = Tipo de distancia
