Implementada métrica elbow #44

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -114,7 +114,7 @@ choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
 clustering.2Dgraph                       = 2D graph
-clustering.analize                       = Analize
+clustering.analyze                       = Analyze
 clustering.centroid                      = Centroid
 clustering.centroids                     = Centroids
 clustering.cluster                       = Cluster
