--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -114,7 +114,7 @@ choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
 clustering.2Dgraph                       = Gr\u00E1fico 2D
-clustering.analize                       = Analizar
+clustering.analyze                       = Analizar
 clustering.centroid                      = Centroide
 clustering.centroids                     = Centroides
 clustering.cluster                       = Agrupaci\u00F3n
